--- a/distro/configs/openmrs/frontend_config/ozone-frontend-config.json
+++ b/distro/configs/openmrs/frontend_config/ozone-frontend-config.json
@@ -1,5 +1,74 @@
 {
   "@openmrs/esm-primary-navigation-app": {
+    "extensionSlots": {
+      "app-menu-slot": {
+        "configure": {
+          "appointments-link": {
+            "Display conditions": {
+              "privileges": [
+                "Manage Appointments"
+              ]
+            }
+          },
+          "form-builder-app-menu-link": {
+            "Display conditions": {
+              "privileges": [
+                "Build Forms"
+              ]
+            }
+          },
+          "dispensing-link": {
+            "Display conditions": {
+              "privileges": [
+                "Manage Dispensing"
+              ]
+            }
+          },
+          "forms-app-link": {
+            "Display conditions": {
+              "privileges": [
+                "Access Fast Data Entry"
+              ]
+            }
+          },
+          "patient-list-linkq": {
+            "Display conditions": {
+              "privileges": [
+                "Manage Patient Lists"
+              ]
+            }
+          },
+          "offline-tools-link": {
+            "Display conditions": {
+              "privileges": [
+                "Access Offline Tools"
+              ]
+            }
+          },
+          "cohort-builder-app-link": {
+            "Display conditions": {
+              "privileges": [
+                "Manage Cohorts"
+              ]
+            }
+          },
+          "system-administration-link": {
+            "Display conditions": {
+              "privileges": [
+                "View Administration Functions"
+              ]
+            }
+          },
+          "outpatient-link": {
+            "Display conditions": {
+              "privileges": [
+                "Access Outpatient App"
+              ]
+            }
+          }
+        }
+      }
+    },
     "externalRefLinks": [
       {
         "title": "Pharmacy, Billing & Inventory",
